Fix arrows not being centered on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ hr:after {
 .slideshow-container {
     max-width: 100%;
     position: relative;
+    align-items: center;
     margin: auto;
 }
 
@@ -109,7 +110,7 @@ hr:after {
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -22px;
+    transform: translateY(-50%);
     padding: 0 4%;
     color: darkgray;
     font-weight: bold;
@@ -340,7 +341,7 @@ a{
 
     .prev, .next {
         padding: 0 3%;
-        font-size: 30px;
+        font-size: 40px;
     }
 
     .buttonbox {
